src/test/deca/context/invalid/homemade/void_parameter.deca
// trying to give a parameter the type void

class A {
    int x(void z) {}
}